log
Thu 16 May 2024 03:45:33 AM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  2|4
total_score: 15/70
dfe6a34
Thu 16 May 2024 04:14:03 AM UTC: 
 sudoku.c | 58 +++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 41 insertions(+), 17 deletions(-)
 tests:  6|2
total_score: 45/70
7824bcb
Thu 16 May 2024 04:14:47 AM UTC: 
 sudoku.c | 28 ++++++++++++----------------
 1 file changed, 12 insertions(+), 16 deletions(-)
 tests:  6|2
total_score: 45/70
ff378eb
Thu 16 May 2024 04:30:49 AM UTC: 
 sudoku.c | 41 +++++++++++++++++------------------------
 1 file changed, 17 insertions(+), 24 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:22: error: ‘num’ undeclared (first use in this function)
   55 |         if (filas[i][num]) return 0;
      |                      ^~~
sudoku.c:55:22: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:7: error: variable ‘subm’ set but not used [-Werror=unused-but-set-variable]
   49 |   int subm[9][10] = {0}; // Para verificar numeros en submatrices de 3x3
      |       ^~~~
sudoku.c:48:7: error: variable ‘cols’ set but not used [-Werror=unused-but-set-variable]
   48 |   int cols[9][10] = {0}; // Para verificar numeros en columnas
      |       ^~~~
sudoku.c:47:7: error: variable ‘filas’ set but not used [-Werror=unused-but-set-variable]
   47 |   int filas[9][10] = {0}; // Para verificar numeros en filas
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
80db6d3
Thu 16 May 2024 04:32:41 AM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  6|2
total_score: 45/70
1551b9a
Sat 18 May 2024 04:42:51 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
ab465bc
Sat 18 May 2024 05:03:47 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
dc5c3da
Sat 18 May 2024 05:03:56 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:122:1: error: control reaches end of non-void function [-Werror=return-type]
  122 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d40cbb7
Sat 18 May 2024 05:08:10 PM UTC: 
 sudoku.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  0|0
ffe99b8
Sat 18 May 2024 05:09:51 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
a0ce345
Sat 18 May 2024 05:10:22 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9eea3d7
Sat 18 May 2024 05:13:24 PM UTC: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|0
3a3e989
Sat 18 May 2024 05:16:46 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:129:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  129 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e3e3c08
